--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:Andifeind/atom-node-inspector.git"
+    "url": "https://github.com/Andifeind/atom-node-inspector.git"
   },
   "license": "MIT",
   "engines": {
